--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     }
     polaris-chip {
       margin: 16px;
+      --polaris-chip-backgruond-color: azure;
+    }
+    a{
+      margin: 16px;
+      color: red;
+      background-color: azure;
+      padding: 50px;
     }
   </style>
   <title>polaris-chip / my-card</title>
@@ -30,10 +37,46 @@
   <polaris-chip title="Faculty and Staff"></polaris-chip>
   <polaris-chip title="Sports are the only thing that matter"></polaris-chip>
   <polaris-chip title="Grants and donations"></polaris-chip>
-
+  <a href ="https://psu.edu" target="_blank">PSU</a>
   <h1>my-card</h1>
-  <my-card></my-card>
+</body>
+<my-card fancy> </my-card>
 
+<my-card
+fancy
+title="Plane 1"
+description="This is a cool plane."
+image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
+link="https://hax.psu.edu"
+></my-card>
+<my-card
+fancy
+title="Plane 2"
+description="This is a cool plane."
+image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
+link="https://hax.psu.edu"
+></my-card>
+<my-card
+fancy
+title="Plane 3"
+description="This is a cool plane."
+image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
+link="https://hax.psu.edu"
+></my-card>
+<my-card
+fancy
+title="Plane 4"
+description="This is a cool plane."
+image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
+link="https://hax.psu.edu"
+></my-card>
+<my-card
+fancy
+title="Plane 5"
+description="This is a cool plane."
+image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
+link="https://hax.psu.edu"
+></my-card>
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
   <script type="module" src="./src/my-card.js"></script>
