--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <base href="/">
 
   <style>
+     details summary {
+    text-align: left;
+    font-size: 20px;
+    padding: 8px 0;
+  }
+
+  details[open] summary {
+    font-weight: bold;
+  }
+
+  details div {
+    border: 8px solid black;
+    text-align: left;
+    padding: 8px;
+    height: 70px;
+    overflow: auto;
+  }
+
     :root,
     html,
     body {
@@ -40,43 +58,53 @@
   <a href ="https://psu.edu" target="_blank">PSU</a>
   <h1>my-card</h1>
 </body>
-<my-card fancy> </my-card>
+<h1> my-card</h1>
+<my-card> </my-card>
 
 <my-card
-fancy
-title="Plane 1"
-description="This is a cool plane."
-image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
-link="https://hax.psu.edu"
-></my-card>
+  fancy
+  title="Cool Plane"
+  image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0"
+  link="https://hax.psu.edu"
+>
+  <p>This is a cool plane.</p>
+</my-card>
 <my-card
-fancy
-title="Plane 2"
-description="This is a cool plane."
-image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
-link="https://hax.psu.edu"
-></my-card>
+  fancy
+  title="Small Plane"
+  image="https://th.bing.com/th/id/R.522a472d2527044807fde27df56fc54b?rik=OjiZC7EnHySe3w&riu=http%3a%2f%2fstatic.businessinsider.com%2fimage%2f549dd509ecad04bb578b4567%2fimage.jpg&ehk=497pIukkyQYeerjXN%2b%2fYy28XI5Cc%2b4nq%2bbRo9E0ZqYg%3d&risl=&pid=ImgRaw&r=0"
+  link="https://hax.psu.edu"
+>
+  <p>This is a small plane.</p>
+</my-card>
 <my-card
-fancy
-title="Plane 3"
-description="This is a cool plane."
-image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
-link="https://hax.psu.edu"
-></my-card>
+  fancy
+  title="Big Plane"
+  image="https://1.bp.blogspot.com/-U303THmOBME/Wu0dNv0wdvI/AAAAAAAAMGk/qyDxCbNM2foLEPcCIpjoklBi1hoRL_3jACLcBGAs/s1600/2018040712335386432.jpg"
+  link="https://hax.psu.edu"
+>
+  <p>This is a big plane.</p>
+</my-card>
 <my-card
-fancy
-title="Plane 4"
-description="This is a cool plane."
-image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
-link="https://hax.psu.edu"
-></my-card>
+  fancy
+  title="Sad Plane"
+  image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0"
+  link="https://hax.psu.edu"
+>
+  <p>This is a sad plane.</p>
+</my-card>
 <my-card
-fancy
-title="Plane 5"
-description="This is a cool plane."
-image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0" 
-link="https://hax.psu.edu"
-></my-card>
+  fancy
+  title="Happy Plane"
+  image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0"
+  link="https://hax.psu.edu"
+>
+  <p>This is a happy plane.</p>
+</my-card>
+
+
+
+
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
   <script type="module" src="./src/my-card.js"></script>
