--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <my-card
   fancy
   title="Sad Plane"
-  image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0"
+  image="https://static7.depositphotos.com/1266781/750/v/950/depositphotos_7503688-stock-illustration-sad-plane.jpg"
   link="https://hax.psu.edu"
 >
   <p>This is a sad plane.</p>
@@ -96,7 +96,7 @@
 <my-card
   fancy
   title="Happy Plane"
-  image="https://th.bing.com/th/id/R.f7b805f8d6aebf6d73c6ca65469a7d1e?rik=TqknlK%2b%2bXuBIVQ&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fairplane-clipart-transparent-background%2fairplane-clipart-transparent-background-13.png&ehk=rpC8t5wR6CTJSZpqdsUZfPnvQC7BgJqtoC1VobnYnbQ%3d&risl=&pid=ImgRaw&r=0"
+  image="https://openclipart.org/image/2400px/svg_to_png/48613/1271514698.png"
   link="https://hax.psu.edu"
 >
   <p>This is a happy plane.</p>
